--- a/app.json
+++ b/app.json
@@ -6,6 +6,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "expo": {
+      "jsEngine": "jsc"
+    },
     "splash": {
       "image": "./assets/logo192.png",
       "resizeMode": "contain",
