--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
