--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~50.0.15",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
