--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "~50.0.15",
-    "expo-font": "~11.10.3",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-font": "~12.0.5",
+    "expo-status-bar": "~1.12.1",
     "lodash.debounce": "^4.0.8",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0",
