--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.7.2",
-    "expo": "~51.0.14",
+    "expo": "~51.0.16",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
+    "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
@@ -26,7 +26,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-dev-client": "~4.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
