Fixed search query

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "almanissoko",
     "slug": "almanissoko",
     "scheme": "almanissoko",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -20,7 +20,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#161622"
       },
-      "package": "com.tarase.almanissoko"
+      "package": "com.tarase.almanissoko",
+      "versionCode": 2 
     },
     "web": {
       "favicon": "./assets/favicon.png"
