--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^6.1.17",
     "axios": "^1.7.2",
-    "expo": "~51.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^53.0.20",
+    "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-status-bar": "~2.2.3",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-calendar-picker": "^8.0.4",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-dev-client": "~4.0.19"
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
